--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "compression": "~1.0.1",
     "lodash": "~2.4.1",
     "mongoose": "~3.8.8",
-    "connect-mongo": "mrzepinski/connect-mongo#2135988",
+    "connect-mongo": "~0.4.0",
     "passport": "~0.2.0",
     "passport-local": "~0.1.6",
     "ejs": "~0.8.4"
